--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div>
                 <form>
                     <input type="text" placeholder="City" id="city">
-                    <button type="button" id="search">Search</button>
+                    <button type="button" id="search" id="search">Search</button>
                 </form>
                 <div class="history">
 
@@ -26,7 +26,6 @@
         </aside>
         <section>
             <div id="card-current-city">
-                <h2>Atlanta</h2>
             </div>
             <div class="forecast">
                 <h3>5-Day Forecast</h3>
