fetch longitude latitude from current day api and feed into one call api so can access the daily and uv index

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             <div class="info-box">
               Info Box
               <div id="current-wind">Current Wind</div>
+              <div id="current-humidity">Current Humidity</div>
               <div id="current-uv-index">Current UV Index</div>
 
             </div>
@@ -132,7 +133,7 @@
     </section>
 
   </main>
-  
+
   <script src="./assets/js/script.js"></script>
 
 </body>
