fixed longitude and latitude backwards. Added in the setting of the icon attribuet

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <div class="top-current">
           Top Current
-          <div class="current-title">Current Title</div>
+          <div class="title">5-Day Weather Forecast<span class="current-title"></span></div>
           <div id="current-time">Current Time</div>
         </div>
 
@@ -46,7 +46,7 @@
             <div class="current-degree-icon">
               Current Degree Icon
               <div id="current-degree">Current Degree</div>
-              <div id="current-icon">Current Icon</div>
+              <img id="current-icon" src="" alt="Current Weather Graphic">Current Icon</img>
             </div>
 
             <div class="sunset-sunrise">
@@ -135,6 +135,7 @@
   </main>
 
   <script src="./assets/js/script.js"></script>
-
+  <script  type="text/javascript"  src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"
+></script>
 </body>
 </html>
