removed extra html words for formatting to see hat it would look like on load. Functionality for main current search is completed.

--- a/index.html
+++ b/index.html
@@ -26,50 +26,45 @@
     </aside>
 
     <section class="main col-10">
-      Main
+
       <div class="current">
-        Current
+
 
         <div class="top-current">
-          Top Current
           <div class="title">5-Day Weather Forecast<span class="current-title"></span></div>
-          <div id="current-time">Current Time</div>
+          <div id="current-time"></div>
         </div>
 
         <div class="bottom-current">
-          Bottom Current
-          <div id="current-date">Current Date</div>
-          <div class="daynight">Day or Night</div>
+          <div id="current-date"></div>
 
           <div class="current-info">
-            Current Info Box
             <div class="current-degree-icon">
-              Current Degree Icon
-              <div id="current-degree">Current Degree</div>
-              <img id="current-icon" src="" alt="Current Weather Graphic">Current Icon</img>
+              <p id="current-degree"></p>
+            <img id="current-icon" src="" alt="Current Weather Graphic"></img>
             </div>
 
             <div class="sunset-sunrise">
-              Sunset Sunrise
-              <div id="sunrise">Sunrise</div>
-              <div id="sunset">Sunset</div>
+
+              <div id="sunrise"></div>
+              <div id="sunset"></div>
             </div>
           </div>
 
           <div class="current-info"> 
-            Current Info Box 2
+
 
             <div class="high-low">
-              High-Low
-              <div id="high">High</div>
-              <div id="low">Low</div>
+
+              <div id="high"></div>
+              <div id="low"></div>
             </div>
 
             <div class="info-box">
-              Info Box
-              <div id="current-wind">Current Wind</div>
-              <div id="current-humidity">Current Humidity</div>
-              <div id="current-uv-index">Current UV Index</div>
+
+              <div id="current-wind"></div>
+              <div id="current-humidity"></div>
+              <div id="current-uv-index"></div>
 
             </div>
           </div>
