edit the index.html and add in the function to create the div/p/img tags rather than already being there. add a function to loop through the attributes and add the classes

--- a/index.html
+++ b/index.html
@@ -72,59 +72,12 @@
         </div>
       </div>
 
-      <!-- <div class="forecast-cards"> 
-        Forecast Cards
-        <div class="cards" id="card-1">
-          Card 1
-          <h5 class="forecast-date" id="1" value=1>Card 1 Date</h5>
-          <div class="forecast-temp">
-            <p class="forecast-degrees" id="card-temp-1" value=1>Degrees</p>
-            <icon class="forecast-icon" id="card-icon-1" value=1>Icon</icon>
-          </div>
-          <p class="forecast-wind" id="forecast-wind-1" value=1></p>>Wind</p>
-          <p class="forecast-humidity" id="forecast-humidity-1" value=1>Humidity</p>
-        </div>
-        <div class="cards" id="card-2">
-          Card 2
-          <h5 class="forecast-date" id="2" value=2>Card 2 Date</h5>
-          <div class="forecast-temp">
-            <p class="forecast-degrees" id="card-temp-2" value=2>Degrees</p>
-            <icon class="forecast-icon" id="card-icon-2" value=2>Icon</icon>
-          </div>
-          <p class="forecast-wind" id="forecast-wind-2" value=2></p>>Wind</p>
-          <p class="forecast-humidity" id="forecast-humidity-2" value=2>Humidity</p>
-        </div>
-        <div class="cards" id="card-3">
-          Card 3
-          <h5 class="forecast-date" id="3" value=3>Card 3 Date</h5>
-          <div class="forecast-temp">
-            <p class="forecast-degrees" id="card-temp-3" value=3>Degrees</p>
-            <icon class="forecast-icon" id="card-icon-3" value=3>Icon</icon>
-          </div>
-          <p class="forecast-wind" id="forecast-wind-3" value=3></p>>Wind</p>
-          <p class="forecast-humidity" id="forecast-humidity-3" value=3>Humidity</p>
-        </div>
-        <div class="cards" id="card-4">
-          Card 4
-          <h5 class="forecast-date" id="4" value=4>Card 4 Date</h5>
-          <div class="forecast-temp">
-            <p class="forecast-degrees" id="card-temp-4" value=4>Degrees</p>
-            <icon class="forecast-icon" id="card-icon-4" value=4>Icon</icon>
-          </div>
-          <p class="forecast-wind" id="forecast-wind-4" value=4></p>>Wind</p>
-          <p class="forecast-humidity" id="forecast-humidity-4" value=4>Humidity</p>
-        </div>
-        <div class="cards" id="card-5">
-          Card 5
-          <h5 class="forecast-date" id="5" value=5>Card 5 Date</h5>
-          <div class="forecast-temp">
-            <p class="forecast-degrees" id="card-temp-5" value=5>Degrees</p>
-            <icon class="forecast-icon" id="card-icon-5" value=5>Icon</icon>
-          </div>
-          <p class="forecast-wind" id="forecast-wind-5" value=5></p>>Wind</p>
-          <p class="forecast-humidity" id="forecast-humidity-5" value=5>Humidity</p>
-        </div>
-      </div> -->
+      <div class="forecast-cards"> 
+
+        <div class="cards">
+
+       
+      </div>
     </section>
 
   </main>
