--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <title>5-Day Weather Forecast</title>
 </head>
 <body>
+
   <header>
     <h2>Weather Dashboard</h2>
   </header>
@@ -17,9 +18,9 @@
 
     <aside class="search col-3">
       <div class="search-section">
-          <form>
-            <input type="text" placeholder="Search for a City:" id="city">
-            <button type="button" id="search" id="search">Search</button>
+        <form>
+          <input type="text" placeholder="Search for a City:" id="city">
+          <button type="button" id="search" id="search">Search</button>
         </form>
       </div>
       <div class="search-history">Search History</div>
@@ -29,55 +30,52 @@
 
       <div class="current">
 
-
         <div class="top-current">
+          <!--  -->
           <div class="title">5-Day Weather Forecast<span class="current-title"></span></div>
           <div id="current-time"></div>
+          <!--  -->
         </div>
 
         <div class="bottom-current">
+          
           <div id="current-date"></div>
 
           <div class="current-info">
+            <!--  -->
             <div class="current-degree-icon">
               <p id="current-degree"></p>
-            <img id="current-icon" src="" alt="Current Weather Graphic"></img>
+              <img id="current-icon" src="" alt="Current Weather Graphic"></img>
             </div>
 
             <div class="sunset-sunrise">
-
               <div id="sunrise"></div>
               <div id="sunset"></div>
             </div>
+            <!--  -->
           </div>
 
           <div class="current-info"> 
-
-
+            <!--  -->
             <div class="high-low">
-
               <div id="high"></div>
               <div id="low"></div>
             </div>
 
             <div class="info-box">
-
               <div id="current-wind"></div>
               <div id="current-humidity"></div>
               <div id="current-uv-index"></div>
-
             </div>
+            <!--  -->
           </div>
-
         </div>
       </div>
 
       <div class="forecast-cards"> 
-
-        <div class="cards">
-        </div>
-       
+        <div class="cards"></div>
       </div>
+
     </section>
 
   </main>
