working on the history button scripts

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <aside class="search col-3">
       <div class="search-section">
         <form>
-          <input type="text" placeholder="Search for a City:" id="city">
+          <input type="text" placeholder="Search for a City:" class="city">
           <button type="button" id="search" id="search">Search</button>
         </form>
       </div>
@@ -80,7 +80,7 @@
 
   </main>
 
-  <script src="./assets/js/script.js"></script>
+  <script type="module" src="./assets/js/script.js"></script>
   <script  type="text/javascript"  src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"
 ></script>
 </body>
