got all of the functions working together!

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         </form>
       </div>
       <div class="search-history">Search History</div>
+
+      <button type="button" class="clear-history">Clear</button>
     </aside>
 
     <section class="main col-10">
