changed the add history only to run if the city does not exist previously

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <button type="button" id="search" id="search">Search</button>
         </form>
       </div>
-      <div class="search-history">Search History</div>
+      <div class="search-history"></div>
 
       <button type="button" class="clear-history">Clear</button>
     </aside>
@@ -75,7 +75,7 @@
       </div>
 
       <div class="forecast-cards"> 
-        <div class="cards"></div>
+        <!-- <div class="cards"></div> -->
       </div>
 
     </section>
