--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
 
   <header>
-    <h2>Weather Dashboard</h2>
+    <h1>Weather Dashboard</h1>
   </header>
 
   <main>
 
-    <aside class="search col-3">
-      <div class="search-section">
+    <aside class="search">
+      <div class="search-section col-12">
         <form>
           <input type="text" placeholder="Search for a City:" class="city">
           <button type="button" id="search" id="search">Search</button>
@@ -25,16 +25,16 @@
       </div>
       <div class="search-history"></div>
 
-      <button type="button" class="clear-history">Clear</button>
+      <button type="button" class="clear-history"><a>Clear</a></button>
     </aside>
 
-    <section class="main col-10">
+    <section class="main col-9">
 
       <div class="current">
 
         <div class="top-current">
           <!--  -->
-          <div class="title">5-Day Weather Forecast<span class="current-title"></span></div>
+          <div class="title"><a>5-Day Weather Forecast</a> <span class="current-title"></span></div>
           <div id="current-time"></div>
           <!--  -->
         </div>
@@ -43,14 +43,14 @@
           
           <div id="current-date"></div>
 
-          <div class="current-info">
+          <div class="current-top">
             <!--  -->
             <div class="current-degree-icon">
               <p id="current-degree"></p>
               <img id="current-icon" src="" alt="Current Weather Graphic"></img>
             </div>
 
-            <div class="sunset-sunrise">
+            <div class="sunset-sunrise"> 
               <div id="sunrise"></div>
               <div id="sunset"></div>
             </div>
@@ -59,7 +59,7 @@
 
           <div class="current-info"> 
             <!--  -->
-            <div class="high-low">
+            <div class="high-low col-3">
               <div id="high"></div>
               <div id="low"></div>
             </div>
